# CMakeAndCppUTestTemplate

./: CMakeLists.txt  LICENSE  README.md
Foo/: CMakeLists.txt
Foo/Foo/: Main.cpp
Foo/tests/: CMakeLists.txt  TestMain.cpp
libFoo-Application/: CMakeLists.txt
libFoo-Application/libFoo/Application/: Application.cpp  Application.hpp
libFoo-Application/tests/: Application.test.cpp  CMakeLists.txt  TestMain.cpp
libFoo-Core/: CMakeLists.txt
libFoo-Core/libFoo/Core/: Core.cpp  Core.hpp
libFoo-Core/tests/: CMakeLists.txt  Core.test.cpp  TestMain.cpp
